# etherlink-bridge

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  etherlink_bridge_demo.ipynb  pyproject.toml  ticketer-sequence.uml
components/etherlink-l2-side/: README.md  foundry.toml
components/etherlink-l2-side/src/: BridgePrecompile.sol  ERC20Wrapper.sol  IDeposit.sol  IDepositEvent.sol  IWithdraw.sol  IWithdrawEvent.sol  Kernel.sol
components/etherlink-l2-side/test/: Base.t.sol  BridgePrecompile.t.sol  ERC20Proxy.t.sol  ERC20Wrapper.t.sol  Kernel.t.sol
components/tezos-l1-side/: Makefile  README.md  pyproject.toml
components/tezos-l1-side/contracts/: router.mligo
components/tezos-l1-side/contracts/common/: errors.mligo  utility.mligo
components/tezos-l1-side/contracts/common/entrypoints/: rollup-deposit.mligo
components/tezos-l1-side/contracts/common/tokens/: fa12.mligo  fa2.mligo  index.mligo
components/tezos-l1-side/contracts/common/types/: entrypoints.mligo  routing-data.mligo  routing-info.mligo  ticket.mligo
components/tezos-l1-side/contracts/proxies/: deposit.mligo  generic.mligo  release.mligo  router.mligo
components/tezos-l1-side/contracts/rollup-mock/: message.mligo  rollup-mock.mligo  storage.mligo
components/tezos-l1-side/contracts/ticket-helper/: storage.mligo  ticket-helper.mligo
components/tezos-l1-side/contracts/ticketer/: storage.mligo  ticketer.mligo
components/tezos-l1-side/scripts/: deploy.py
components/tezos-l1-side/tests/: README.md  base.py  test_communication.py  test_proxy.py  test_ticketer.py
components/tezos-l1-side/tests/helpers/: metadata.py  tickets.py  utility.py
components/tezos-l1-side/tests/helpers/contracts/: __init__.py  contract.py  proxy.py  rollup_mock.py  router.py  ticket_helper.py  ticketer.py
components/tezos-l1-side/tests/helpers/contracts/tokens/: __init__.py  fa12.py  fa2.py  token.py
components/tezos-l1-side/tests/tokens/: README.md
contracts/: check.mligo  locker.mligo  proxy.mligo  rollup-mock.mligo  router.mligo  ticket-storage.mligo  ticketer.mligo
contracts/common/: errors.mligo  types.mligo  utility.mligo
contracts/common/tokens/: fa12.mligo  fa2.mligo  index.mligo
contracts/common/types/: entrypoints.mligo  routing-data.mligo  ticket.mligo
contracts/proxies/: generic.mligo  l2-burn.mligo  router.mligo  storage.mligo  ticketer.mligo
contracts/proxy/: proxy-generic.mligo  proxy-l2-burn.mligo  proxy-router.mligo  proxy-ticketer.mligo  storage.mligo
contracts/rollup-mock/: message.mligo  rollup-mock.mligo  storage.mligo
contracts/router/: router.mligo  storage.mligo
contracts/ticketer/: ticketer.mligo
docs/: Bridge-configuration.md  README.md  deposit-sequence.uml  monitor.ipynb  permissionless-ticket-transfer.excalidraw  ticketer-activity.uml  ticketer-sequence.uml
docs/scenarios/: batch-withdrawals.ipynb  decode_address.ipynb  deposit-to-contract-with-receive-logic.ipynb  fast_withdrawals.ipynb  fast_withdrawals_storage_costs.ipynb  indexer_integration.py  integration-tests-for-fast-withdrawal-indexer.ipynb  outbox-enumerator.ipynb  revert-failed-deposit.ipynb  setup.ipynb  setup.py  transfer-tokens.ipynb  withdrawal-precompile-reentrancy.ipynb
etherlink/: Makefile  README.md  foundry.toml  remappings.txt
etherlink/src/: BatchCallHelper.sol  BulkWithdrawal.sol  DepositTester.sol  ERC20Proxy.sol  ERC20ProxyNoRestrictions.sol  IDepositEvent.sol  IWithdrawalEvent.sol  Kernel.sol  KernelMock.sol  NativeWithdrawalProxy.sol  OutboxEnumerator.sol  TokenProxyTester.sol
etherlink/test/: Base.t.sol  BulkWithdrawal.t.sol  ERC20Proxy.t.sol  Kernel.t.sol  KernelMock.t.sol  NativeWithdrawalProxy.t.sol  TicketHash.t.sol
networks/: shadownet-etherlink.toml  shadownet-tezosx.toml
scripts/: bootstrap.py  bridge_token.py  cli.py  cli_options.py  contracts.py  defaults.py  deploy.py  environment.py  etherlink.py  networks.py  tezos.py  utility.py
scripts/bootstrap/: bootstrap.py  cli.py  const.py  dto.py
scripts/etherlink/: __init__.py  build_contracts.py  deploy_erc20.py  erc20_helper.py  fa_withdraw.py  parse_withdrawal_event.py  test_contracts.py  withdraw.py  xtz_fast_withdraw.py  xtz_withdraw.py
scripts/helpers/: __init__.py  addressable.py  cli.py  formatting.py  locker.py  metadata.py  proof.py  proxy.py  scenarios.py  ticket.py  ticket_content.py  ticketer.py  timer.py  utility.py
scripts/helpers/contracts/: __init__.py  contract.py  exchanger.py  fast_withdrawal.py  metadata_tracker.py  purchase_withdrawal_proxy.py  rollup_mock.py  service_provider.py  ticket_helper.py  ticket_router_tester.py  ticketer.py  token_bridge_helper.py  xtz_ticketer.py
scripts/helpers/etherlink/: __init__.py  contract.py  contract_testers.py  erc20_proxy.py  fa_deposit.py  fa_withdrawal_precompile.py  xtz_withdrawal_precompile.py
scripts/helpers/rollup_node/: __init__.py  ticket_table.py
scripts/monitoring/: common.py  deposits.py  withdrawals.py
scripts/rollup/: __init__.py  get_proof.py  scan_outbox.py
scripts/rollup_node/: __init__.py  get_proof.py  scan_outbox.py
scripts/tests/: cli_test.py  conftest.py  deposit.py  deposit_test.py  dto.py  indexer_content_test.py  withdraw.py  withdraw_test.py
scripts/tezos/: __init__.py  build_contracts.py  compile_contract.py  deploy_fast_withdrawal.py  deploy_purchase_withdrawal_proxy.py  deploy_router.py  deploy_ticketer.py  deploy_token.py  deploy_token_bridge_helper.py  deposit.py  execute_outbox_message.py  fa_deposit.py  get_ticketer_params.py  xtz_deposit.py  xtz_deposit_michelson.py
tests/: base.py  test_communication.py  test_proxy.py  utility.py
tests/helpers/: __init__.py  contract.py  locker.py  metadata.py  proxy.py  rollup_mock.py  routing_data.py  ticketer.py  tickets.py  utility.py
tezos/: README.md
tezos/contracts/: router.mligo  test-mock.mligo
tezos/tests/: README.md  base.py  test_communication.py  test_fast_withdrawal.py  test_metadata_tracker.py  test_ticket_helper.py  test_ticket_router_tester.py  test_ticketer.py  test_token_bridge_helper.py  test_utils.py
(+80 files in other folders)
