[project]
name = "etherlink-bridge"
version = "1.0.0"
description = "This repository showcases smart contracts for an FA tokens bridge between Tezos and Etherlink, aligned with the TZIP-029 standard."
authors = [{ name = "Stepan Naumov", email = "ztepler@baking-bad.org" }]
requires-python = ">=3.10,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pytezos==3.18.0",
    "click>=8.1.7,<9",
    "eth-abi>=5.1.0,<6",
    "web3>=6.20.0,<7",
    "survey>=5.3.0,<6",
    "tabulate>=0.9.0,<0.10",
    "gql[requests]>=3.5.0,<4",
    "requests>=2.28.2,<3",
    "pydantic>=2.6.1,<3",
]

[project.optional-dependencies]
# Jupyter stack for the docs/scenarios notebooks — opt in with
# `uv sync --extra notebooks`; not part of the default install.
notebooks = ["pytezos[jupyter]==3.18.0"]

[project.scripts]
deploy_token = "scripts.tezos:deploy_token"
deploy_ticketer = "scripts.tezos:deploy_ticketer"
deploy_router = "scripts.tezos:deploy_router"
deploy_token_bridge_helper = "scripts.tezos:deploy_token_bridge_helper"
get_ticketer_params = "scripts.tezos:get_ticketer_params"
deploy_erc20 = "scripts.etherlink:deploy_erc20"
fund_etherlink_account = "scripts.etherlink:fund_account"
deposit = "scripts.tezos:deposit"
withdraw = "scripts.etherlink:withdraw"
get_proof = "scripts.rollup_node:get_proof"
execute_outbox_message = "scripts.tezos:execute_outbox_message"
parse_withdrawal_event = "scripts.etherlink:parse_withdrawal_event"
build_tezos_contracts = "scripts.tezos:build_contracts"
build_fast_withdrawal = "scripts.tezos:build_fast_withdrawal"
build_etherlink_contracts = "scripts.etherlink:build_contracts"
etherlink_tests = "scripts.etherlink:test_contracts"
bootstrap = "scripts.bootstrap.bootstrap:rollout"
bridge_token = "scripts.bridge_token:bridge_token"
scan_outbox = "scripts.rollup_node:scan_outbox"
xtz_deposit = "scripts.tezos:xtz_deposit"
xtz_withdraw = "scripts.etherlink:xtz_withdraw"
deploy_fast_withdrawal = "scripts.tezos:deploy_fast_withdrawal"
xtz_fast_withdraw = "scripts.etherlink:xtz_fast_withdraw"
monitor_deposits = "scripts.monitoring.deposits:monitor_deposits"
monitor_withdrawals = "scripts.monitoring.withdrawals:monitor_withdrawals"

[dependency-groups]
dev = [
    "mypy>=1.8.0,<2",
    "pytest>=8.0.0,<9",
    "black>=24.2.0,<25",
    "types-requests>=2.31.0.20240125,<3",
    "ruff>=0.2.1,<0.3",
]

[tool.uv]

[tool.uv.build-backend]
module-name = [
    "tezos",
    "scripts",
]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.mypy]
strict = true
disallow_any_generics = false

[[tool.mypy.overrides]]
# These third-party libs ship no type stubs / py.typed marker.
module = ["survey.*", "tabulate"]
ignore_missing_imports = true

[tool.black]
skip-string-normalization = true

[tool.ruff.lint.per-file-ignores]
# This scenario module is a re-export hub for the notebooks, which do
# `from docs.scenarios.setup import *`; its imports are intentional, not unused.
"docs/scenarios/setup.py" = ["F401"]

[tool.pytest.ini_options]
# By default run only offline/sandbox tests (tezos/tests). The integration
# tests under scripts/tests/ hit a live network + indexer and sign real
# operations — opt in with `pytest -m integration`.
addopts = "-m 'not integration'"
# Only scan the actual test dirs — keeps pytest out of scripts/etherlink, whose
# `test_contracts` click command would otherwise trigger a collection warning.
testpaths = ["tezos/tests", "scripts/tests"]
markers = [
    "integration: hits a live network/indexer and signs real ops; deselected by default",
    "cementation: integration test that also waits for the rollup challenge/refutation window to elapse (long on shadownet)",
    "critical: abort the whole run if this test fails",
]
