[tool.poetry]
name = "ticketer-proto"
version = "0.1.0"
description = ""
authors = ["ztepler <ztepler@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pytezos = "^3.10.3"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
ipython = "^8.14.0"
mypy = "^1.4.1"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
disallow_any_generics = false
